--- a/dotfiles/archbook/hypr/hyprland.conf
+++ b/dotfiles/archbook/hypr/hyprland.conf
@@ -16,6 +16,9 @@ exec-once = hypridle &
 
 exec-once = nm-applet &
 
+exec-once = wl-paste --type text --watch cliphist store
+exec-once = wl-paste --type image --watch cliphist store
+
 #-------------------------------------------
 #-- monitors
 #-------------------------------------------
@@ -25,7 +28,7 @@ monitor=eDP-1,1920x1080@60,0x0,1
 #-- program variables
 #-------------------------------------------
 $terminal = wezterm start
-$fileManager = nemo
+$fileManager = thunar
 $menu = rofi -show drun
 
 #-------------------------------------------
@@ -178,7 +181,7 @@ bind = $mainMod, return, exec, $terminal
 bind = $mainMod Control, return, exec, wezterm --config-file ~/.config/wezterm/wezterm-float.lua start --class="__scratchpad"
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, W, exec, firefox
-bind = $mainMod, N, exec, wezterm --config-file ~/.config/wezterm/wezterm-float.lua start --class="__notes" nvim $HOME/Documents/obsidian-sync/Notes/_quick.md
+bind = $mainMod, N, exec, wezterm start --class="__notes" nvim $HOME/Documents/obsidian-sync/notes/_quick.md
 
 # Window control
 bind = $mainMod, S, togglefloating,
