--- a/dotfiles/applications/rpcs3.desktop
+++ b/dotfiles/applications/rpcs3.desktop
@@ -4,6 +4,6 @@ Type=Application
 Name=RPCS3
 Comment=PS3 Emulator
 Exec=/home/john/apps/rpcs3.AppImage
-Icon=
+Icon=/home/john/apps/icons/rpcs3.png
 Terminal=false
 Categories=Game;
