--- a/dotfiles/applications/steam/Clair Obscur Expedition 33.desktop
+++ b/dotfiles/applications/steam/Clair Obscur Expedition 33.desktop
@@ -1,8 +1,8 @@
 [Desktop Entry]
-Name=Space Engineers
+Name=Clair Obscur: Expedition 33
 Comment=Play this game on Steam
-Exec=steam steam://rungameid/244850
-Icon=steam_icon_244850
+Exec=steam steam://rungameid/1903340
+Icon=steam_icon_1903340
 Terminal=false
 Type=Application
 Categories=Steam;
