--- a/dotfiles/applications/steam/Elite Dangerous.desktop
+++ b/dotfiles/applications/steam/Elite Dangerous.desktop
@@ -1,8 +1,8 @@
 [Desktop Entry]
-Name=Space Engineers
+Name=Elite Dangerous
 Comment=Play this game on Steam
-Exec=steam steam://rungameid/244850
-Icon=steam_icon_244850
+Exec=steam steam://rungameid/359320
+Icon=steam_icon_359320
 Terminal=false
 Type=Application
 Categories=Steam;
