--- a/dotfiles/applications/steam/Ghost of Tsushima DIRECTOR'S CUT.desktop
+++ b/dotfiles/applications/steam/Ghost of Tsushima DIRECTOR'S CUT.desktop
@@ -2,7 +2,7 @@
 Name=Ghost of Tsushima DIRECTOR'S CUT
 Comment=Play this game on Steam
 Exec=steam steam://rungameid/2215430
-Icon=steam
+Icon=steam_icon_2215430
 Terminal=false
 Type=Application
-Categories=Game;
+Categories=Steam;
