--- a/dotfiles/applications/steam/Quake.desktop
+++ b/dotfiles/applications/steam/Quake.desktop
@@ -1,8 +1,8 @@
 [Desktop Entry]
-Name=Space Engineers
+Name=Quake
 Comment=Play this game on Steam
-Exec=steam steam://rungameid/244850
-Icon=steam_icon_244850
+Exec=steam steam://rungameid/2310
+Icon=steam_icon_2310
 Terminal=false
 Type=Application
 Categories=Steam;
