--- a/dotfiles/applications/steam/RimWorld.desktop
+++ b/dotfiles/applications/steam/RimWorld.desktop
@@ -2,7 +2,7 @@
 Name=RimWorld
 Comment=Play this game on Steam
 Exec=steam steam://rungameid/294100
-Icon=steam
+Icon=steam_icon_294100
 Terminal=false
 Type=Application
-Categories=Game;
+Categories=Steam;
