--- a/dotfiles/applications/steam/SILENT HILL 2.desktop
+++ b/dotfiles/applications/steam/SILENT HILL 2.desktop
@@ -2,7 +2,7 @@
 Name=SILENT HILL 2
 Comment=Play this game on Steam
 Exec=steam steam://rungameid/2124490
-Icon=steam
+Icon=steam_icon_2124490
 Terminal=false
 Type=Application
-Categories=Game;
+Categories=Steam;
