--- a/dotfiles/applications/steam/Valheim.desktop
+++ b/dotfiles/applications/steam/Valheim.desktop
@@ -2,7 +2,7 @@
 Name=Valheim
 Comment=Play this game on Steam
 Exec=steam steam://rungameid/892970
-Icon=steam
+Icon=steam_icon_892970
 Terminal=false
 Type=Application
-Categories=Game;
+Categories=Steam;
