--- a/dotfiles/hyprland/hypr/hyprland.conf
+++ b/dotfiles/hyprland/hypr/hyprland.conf
@@ -14,6 +14,11 @@ exec-once = waybar &
 exec-once = hyprpaper &
 exec-once = hypridle &
 
+exec-once = xrandr --output DP-1 --primary # Makes steam launch games on correct monitor
+
+exec-once = swaync
+exec-once = swayosd-server
+
 exec-once = lxsession &
 exec-once = steam -silent &
 exec-once = discord --start-minimized &
@@ -44,8 +49,8 @@ env = LIBVA_DRIVER_NAME,nvidia
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 
 env = QT_QPA_PLATFORM,wayland
-env = QT_QPA_PLATFORMTHEME,qt6ct
-# env = QT_STYLE_OVERRIDE,kvantum
+env = QT_QPA_PLATFORMTHEME,qt5ct
+env = QT_STYLE_OVERRIDE,kvantum
 
 #-------------------------------------------
 #-- look and feel
@@ -148,6 +153,7 @@ input {
   kb_options =
   kb_rules =
   follow_mouse = 2
+	float_switch_override_focus = 0
   sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 }
 
@@ -255,18 +261,18 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 # Laptop multimedia keys for volume and LCD brightness
-bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
-bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
-bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
+bindel = ,XF86AudioRaiseVolume, exec, swayosd-client --monitor DP-1 --output-volume 5
+bindel = ,XF86AudioLowerVolume, exec, swayosd-client --monitor DP-1 --output-volume -5
+bindel = ,XF86AudioMute, exec, swayosd-client --monitor DP-1 --output-volume mute-toggle
+bindel = ,XF86AudioMicMute, exec, swayosd-client --monitor DP-1 --input-volume mute-toggle
 
 # Requires playerctl
 bindl = , XF86AudioNext, exec, playerctl next
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 bind = , XF86Explorer, exec, $HOME/myrepo/myscripts/launchers/spotify.sh launch
+
+bindr = CAPS, Caps_Lock, exec, swayosd-client --monitor DP-1 --caps-lock
 
 #-------------------------------------------
 #-- windows and workspaces
@@ -306,6 +312,9 @@ windowrule = size 1024 786, class:^(__notes)$
 windowrule = float, class:^(org.gnome.Calculator)$
 windowrule = center, class:^(org.gnome.Calculator)$
 
+# Games
+windowrule = monitor 1, class:^(steam_app_230410)$
+# windowrule = monitor 0, class:^(thuna:windowruler)$
 
 # Ignore maximize requests from apps. You'll probably like this.
 windowrulev2 = suppressevent maximize, class:.*
