--- a/dotfiles/hyprland/hypr/hyprland.conf
+++ b/dotfiles/hyprland/hypr/hyprland.conf
@@ -37,7 +37,7 @@ monitor=HDMI-A-1,1920x1080@75,1920x0,1
 #-------------------------------------------
 $terminal = wezterm start
 $fileManager = thunar
-$menu = rofi -show drun
+$menu = rofi -m -1 -show drun
 
 #-------------------------------------------
 #-- environment variables
@@ -47,6 +47,8 @@ env = HYPRCURSOR_SIZE,24
 
 env = LIBVA_DRIVER_NAME,nvidia
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+
+env = HYPRSHOT_DIR=/home/john/Pictures/screenshots
 
 env = QT_QPA_PLATFORM,wayland
 env = QT_QPA_PLATFORMTHEME,qt5ct
@@ -196,8 +198,9 @@ bind = $mainMod, W, exec, firefox
 bind = $mainMod Control, W, exec, firefox --private-window
 bind = $mainMod, I, exec, $HOME/myrepo/myscripts/launchers/launcher.sh btop
 bind = $mainMod, N, exec, wezterm start --class="__notes" nvim $HOME/Documents/obsidian-sync/notes/_quick.md
-bind = $mainMod, C, exec, gnome-calculator
+bind = $mainMod, U, exec, gnome-calculator
 bind = , print, exec, hyprshot -m region --clipboard-only
+bind = $mainMod, print, exec, hyprshot -m output -m active
 
 # Window control
 bind = $mainMod, S, togglefloating,
@@ -229,11 +232,11 @@ bind = $mainMod, 2, workspace, 2
 bind = $mainMod, 3, workspace, 3
 bind = $mainMod, 4, workspace, 4
 bind = $mainMod, 5, workspace, 5
-bind = $mainMod Control, 1, workspace, 6
-bind = $mainMod Control, 2, workspace, 7
-bind = $mainMod Control, 3, workspace, 8
-bind = $mainMod Control, 4, workspace, 9
-bind = $mainMod Control, 5, workspace, 10
+bind = $mainMod, Z, workspace, 6
+bind = $mainMod, X, workspace, 7
+bind = $mainMod, C, workspace, 8
+bind = $mainMod, V, workspace, 9
+bind = $mainMod, B, workspace, 10
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod Shift, 1, movetoworkspace, 1
@@ -241,11 +244,11 @@ bind = $mainMod Shift, 2, movetoworkspace, 2
 bind = $mainMod Shift, 3, movetoworkspace, 3
 bind = $mainMod Shift, 4, movetoworkspace, 4
 bind = $mainMod Shift, 5, movetoworkspace, 5
-bind = $mainMod Control Shift, 1, movetoworkspace, 6
-bind = $mainMod Control Shift, 2, movetoworkspace, 7
-bind = $mainMod Control Shift, 3, movetoworkspace, 8
-bind = $mainMod Control Shift, 4, movetoworkspace, 9
-bind = $mainMod Control Shift, 5, movetoworkspace, 10
+bind = $mainMod Shift, Z, movetoworkspace, 6
+bind = $mainMod Shift, X, movetoworkspace, 7
+bind = $mainMod Shift, C, movetoworkspace, 8
+bind = $mainMod Shift, V, movetoworkspace, 9
+bind = $mainMod Shift, B, movetoworkspace, 10
 
 # Move between monitors
 bind = $mainMod, O, movewindow, mon:+1
@@ -278,11 +281,6 @@ bindr = CAPS, Caps_Lock, exec, swayosd-client --monitor DP-1 --caps-lock
 #-- windows and workspaces
 #-------------------------------------------
 
-# # Scratchpad
-# windowrule = float, ^(__scratchpad)$
-# windowrule = center, ^(__scratchpad)$
-# windowrule = size 1280 720, ^(__scratchpad)$
-#
 # Spotify
 windowrule = float, class:^(__spotify)$
 windowrule = size 1280 720, class:^(__spotify)$
@@ -312,9 +310,10 @@ windowrule = size 1024 786, class:^(__notes)$
 windowrule = float, class:^(org.gnome.Calculator)$
 windowrule = center, class:^(org.gnome.Calculator)$
 
-# Games
-windowrule = monitor 1, class:^(steam_app_230410)$
-# windowrule = monitor 0, class:^(thuna:windowruler)$
+# Misc
+windowrule = float, title:^(Friends List)$
+windowrule = size 350 720, title:^(Friends List)$
+windowrule = monitor 0, title:^(Friends List)$
 
 # Ignore maximize requests from apps. You'll probably like this.
 windowrulev2 = suppressevent maximize, class:.*
