--- a/dotfiles/archbook/hypr/hyprland.conf
+++ b/dotfiles/archbook/hypr/hyprland.conf
@@ -37,6 +37,8 @@ $menu = rofi -show drun
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 
+env HYPRSHOT_DIR=/home/john/Pictures/screenshots
+
 #-------------------------------------------
 #-- look and feel
 #-------------------------------------------
@@ -147,10 +149,6 @@ input {
   }
 }
 
-gestures {
-  workspace_swipe = true
-}
-
 cursor {
   no_hardware_cursors = true
 }
@@ -182,6 +180,10 @@ bind = $mainMod Control, return, exec, wezterm --config-file ~/.config/wezterm/w
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, W, exec, firefox
 bind = $mainMod, N, exec, wezterm start --class="__notes" nvim $HOME/Documents/obsidian-sync/notes/_quick.md
+bind = $mainMod, I, exec, $HOME/myrepo/myscripts/launchers/launcher.sh btop
+bind = $mainMod, U, exec, gnome-calculator
+bind = $mainMod, print, exec, hyprshot -m output -m eDP-1
+bind = , print, exec, hyprshot -m region --clipboard-only
 
 # Window control
 bind = $mainMod, S, togglefloating,
@@ -258,7 +260,7 @@ windowrule = size 1280 720, class:^(__spotify)$
 
 # # Btop Window
 windowrule = float, class:^(__btop)$
-windowrule = size 1280 720, class:^(__btop)$
+windowrule = size 1280 800, class:^(__btop)$
 
 # # Lazygit
 windowrule = float, class:^(__lazygit)$
