--- a/dotfiles/archbook/waybar/config.jsonc
+++ b/dotfiles/archbook/waybar/config.jsonc
@@ -68,7 +68,7 @@
   "custom/pacman": {
     "interval": 180,
     "exec": "checkupdates | wc -l",
-    "format": "{} <span foreground='#8aadf4'></span>"
+    "format": "{} <span foreground='#8aadf4'>󰮯</span>"
   },
 	"custom/clip": {
 		"format": "󰨸",
