--- a/dotfiles/hyprland/hypr/hyprland.conf
+++ b/dotfiles/hyprland/hypr/hyprland.conf
@@ -19,7 +19,6 @@ exec-once = xrandr --output DP-1 --primary # Makes steam launch games on correct
 exec-once = swaync
 exec-once = swayosd-server
 
-exec-once = lxsession &
 exec-once = steam -silent &
 exec-once = discord --start-minimized &
 
@@ -48,11 +47,10 @@ env = HYPRCURSOR_SIZE,24
 env = LIBVA_DRIVER_NAME,nvidia
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 
-env = HYPRSHOT_DIR=/home/john/Pictures/screenshots
+env = HYPRSHOT_DIR,/home/john/Pictures/screenshots
 
 env = QT_QPA_PLATFORM,wayland
-env = QT_QPA_PLATFORMTHEME,qt5ct
-env = QT_STYLE_OVERRIDE,kvantum
+env = QT_QPA_PLATFORMTHEME,qt6ct
 
 #-------------------------------------------
 #-- look and feel
@@ -73,7 +71,7 @@ workspace = 10,monitor:HDMI-A-1
 general {
   gaps_in = 5
   gaps_out = 10
-  border_size = 2
+  border_size = 1
   col.active_border = rgb(8aadf4)
   resize_on_border = false
   allow_tearing = false
@@ -115,19 +113,25 @@ enabled = true
     animation = border, 1, 1, liner
     animation = borderangle, 1, 30, liner, loop
     animation = fade, 1, 10, default
-    animation = workspaces, 1, 5, wind
+    animation = workspaces, 1, 5, default, slide
+    # animation = workspaces, 1, 5, wind
 }
 
-# "Smart gaps" / "No gaps when only"
-workspace = w[t1], gapsout:0, gapsin:0
-workspace = w[tg1], gapsout:0, gapsin:0
-workspace = f[1], gapsout:0, gapsin:0
-windowrulev2 = bordersize 0, floating:0, onworkspace:w[t1]
-windowrulev2 = rounding 0, floating:0, onworkspace:w[t1]
-windowrulev2 = bordersize 0, floating:0, onworkspace:w[tg1]
-windowrulev2 = rounding 0, floating:0, onworkspace:w[tg1]
-windowrulev2 = bordersize 0, floating:0, onworkspace:f[1]
-windowrulev2 = rounding 0, floating:0, onworkspace:f[1]
+# rofi
+layerrule = dimaround, rofi
+layerrule = blur, rofi
+layerrule = animation popin 85%, rofi
+
+# "smart gaps" / "no gaps when only"
+# workspace = w[t1], gapsout:0, gapsin:0
+# workspace = w[tg1], gapsout:0, gapsin:0
+# workspace = f[1], gapsout:0, gapsin:0
+# windowrulev2 = bordersize 0, floating:0, onworkspace:w[t1]
+# windowrulev2 = rounding 0, floating:0, onworkspace:w[t1]
+# windowrulev2 = bordersize 0, floating:0, onworkspace:w[tg1]
+# windowrulev2 = rounding 0, floating:0, onworkspace:w[tg1]
+# windowrulev2 = bordersize 0, floating:0, onworkspace:f[1]
+# windowrulev2 = rounding 0, floating:0, onworkspace:f[1]
 
 dwindle {
   pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
@@ -193,7 +197,7 @@ bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, W, exec, firefox
 bind = $mainMod Control, W, exec, firefox --private-window
 bind = $mainMod, I, exec, $HOME/myrepo/myscripts/launchers/launcher.sh btop
-bind = $mainMod, N, exec, wezterm start --class="__notes" nvim $HOME/Documents/obsidian-sync/notes/_quick.md
+bind = $mainMod, N, exec, wezterm start --class="__notes" nvim $HOME/Dropbox/obsidian/notes/_quick.md
 bind = $mainMod, U, exec, gnome-calculator
 bind = , print, exec, hyprshot -m region --clipboard-only
 bind = $mainMod, print, exec, hyprshot -m output -m active
@@ -259,16 +263,21 @@ bind = $mainMod, mouse_up, workspace, e-1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
+# Volume controls
+# bindel = ,XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
+# bindel = ,XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
+# bindel = ,XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
+
 # Laptop multimedia keys for volume and LCD brightness
 bindel = ,XF86AudioRaiseVolume, exec, swayosd-client --monitor DP-1 --output-volume 5
 bindel = ,XF86AudioLowerVolume, exec, swayosd-client --monitor DP-1 --output-volume -5
 bindel = ,XF86AudioMute, exec, swayosd-client --monitor DP-1 --output-volume mute-toggle
-bindel = ,XF86AudioMicMute, exec, swayosd-client --monitor DP-1 --input-volume mute-toggle
+# bindel = ,XF86AudioMicMute, exec, swayosd-client --monitor DP-1 --input-volume mute-toggle
 
 # Requires playerctl
-bindl = , XF86AudioNext, exec, playerctl next
-bindl = , XF86AudioPlay, exec, playerctl play-pause
-bindl = , XF86AudioPrev, exec, playerctl previous
+bindl = , XF86AudioNext, exec, spotify_player playback next
+bindl = , XF86AudioPlay, exec, spotify_player playback play-pause
+bindl = , XF86AudioPrev, exec, spotify_player playback previous
 bind = , XF86Explorer, exec, $HOME/myrepo/myscripts/launchers/spotify.sh launch
 
 bindr = CAPS, Caps_Lock, exec, swayosd-client --monitor DP-1 --caps-lock
@@ -306,7 +315,10 @@ windowrule = size 1024 786, class:^(__notes)$
 windowrule = float, class:^(org.gnome.Calculator)$
 windowrule = center, class:^(org.gnome.Calculator)$
 
-# Misc
+# Steam
+windowrule = float, title:^(Steam Settings)$
+windowrule = size 1280 720, title:^(Steam Settings)$
+
 windowrule = float, title:^(Friends List)$
 windowrule = size 350 720, title:^(Friends List)$
 windowrule = monitor 0, title:^(Friends List)$
