--- a/dotfiles/hyprland/hypr/hyprpaper.conf
+++ b/dotfiles/hyprland/hypr/hyprpaper.conf
@@ -7,5 +7,14 @@
 #╚═╝░░╚═╝░░░╚═╝░░░╚═╝░░░░░╚═╝░░╚═╝╚═╝░░░░░╚═╝░░╚═╝╚═╝░░░░░╚══════╝╚═╝░░╚═╝#
 ###########################################################################
 
-preload = /home/john/myrepo/Wallpapers/2monitors/atlantis-nebula.jpg
-wallpaper = , /home/john/myrepo/Wallpapers/2monitors/atlantis-nebula.jpg
+# blue & pink
+preload = /home/john/Pictures/wallpapers/burst-l.png
+preload = /home/john/Pictures/wallpapers/burst-r.png
+wallpaper = DP-1, /home/john/Pictures/wallpapers/burst-l.png
+wallpaper = HDMI-A-1, /home/john/Pictures/wallpapers/burst-r.png
+
+# blue
+# preload = /home/john/Pictures/wallpapers/blue-l.png
+# preload = /home/john/Pictures/wallpapers/blue-r.png
+# wallpaper = DP-1, /home/john/Pictures/wallpapers/blue-l.png
+# wallpaper = HDMI-A-1, /home/john/Pictures/wallpapers/blue-r.png
