--- a/dotfiles/hyprland/waybar/old/config.jsonc
+++ b/dotfiles/hyprland/waybar/old/config.jsonc
@@ -12,9 +12,9 @@
     "custom/files",
     "custom/web",
     "custom/obsidian",
-		"network",
   ],
   "modules-right": [
+		"network",
 		"keyboard-state",
 		"custom/prev",
 		"custom/play",
@@ -25,6 +25,8 @@
     "pulseaudio",
     "custom/sep",
     "idle_inhibitor",
+    "custom/sep",
+		"custom/notify",
     "custom/sep",
     "custom/power"
   ],
@@ -65,7 +67,7 @@
   },
 	"network": {
 		"format-ethernet": "",
-		"format-disconnected": "no net",
+		"format-disconnected": " no net ",
 	},
 	"keyboard-state": {
 		"numlock": false,
@@ -84,6 +86,7 @@
   "custom/play": {
     "format": "",
     "on-click": "spotify_player playback play-pause",
+		"on-click-right": "~/myrepo/myscripts/launchers/spotify.sh launch",
 		"tooltip": false,
   },
   "custom/next": {
@@ -114,6 +117,11 @@
         "deactivated": "󱋑"
     }
   },
+	"custom/notify": {
+		"format": "󰎟",
+		"tooltip": false,
+		"on-click": "swaync-client -t -sw",
+	},
   "custom/power": {
     "format": " ⏻ ",
     "on-click": "wlogout -b 5",
@@ -187,7 +195,7 @@
     "critical-threshold": 80,
     // "format-critical": "{temperatureC}°C {icon}",
     "format": "<span foreground='#8aadf4'>{icon}</span> {temperatureC}°C",
-    "format-icons": ["", "", ""],
+    "format-icons": ["", "", "", "", ""],
     "tooltip": false,
   },
   "custom/gpu": {
