--- a/dotfiles/hyprland/hypr/hyprland.conf
+++ b/dotfiles/hyprland/hypr/hyprland.conf
@@ -193,7 +193,8 @@ bind = $mainMod Control, backspace, exec, /home/john/.config/hypr/scripts/reset-
 bind = $mainMod, space, exec, $menu
 bind = $mainMod Control, space, exec, $HOME/myrepo/myscripts/launchers/finder.sh
 bind = $mainMod, return, exec, $terminal
-bind = $mainMod, E, exec, $fileManager
+bind = $mainMod, E, exec, XDG_CURRENT_DESKTOP=kde dolphin
+# bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, W, exec, firefox
 bind = $mainMod Control, W, exec, firefox --private-window
 bind = $mainMod, I, exec, $HOME/myrepo/myscripts/launchers/launcher.sh btop
