--- a/dotfiles/hyprland/hypr/hyprland.d/hardware.conf
+++ b/dotfiles/hyprland/hypr/hyprland.d/hardware.conf
@@ -8,45 +8,37 @@
 ####################################################################
 
 #-------------------------------------------
-#-- configs
+#-- monitors
 #-------------------------------------------
-
-source = hyprland.d/rules.conf
-source = hyprland.d/keybinds.conf
-source = hyprland.d/hardware.conf
-source = hyprland.d/settings.conf
+monitor=DP-1,1920x1080@75,0x0,1
+monitor=HDMI-A-1,1920x1080@75,1920x0,1
 
 #-------------------------------------------
-#-- autostart
+#-- input
 #-------------------------------------------
-exec-once = waybar &
-exec-once = hyprpaper &
-exec-once = hypridle &
-exec-once = systemctl --user start hyprpolkitagent
+input {
+  kb_layout = us
+  kb_variant =
+  kb_model =
+  kb_options =
+  kb_rules =
+  follow_mouse = 2
+	float_switch_override_focus = 0
+  sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+}
 
-exec-once = xrandr --output DP-1 --primary # Makes steam launch games on correct monitor
+cursor {
+  no_hardware_cursors = true
+  no_warps = true
+  default_monitor = DP-1
+}
 
-exec-once = swaync
-exec-once = swayosd-server
+device {
+  name = logi-m240-mouse
+  sensitivity = -0.3
+}
 
-exec-once = steam -silent &
-exec-once = discord --start-minimized &
-
-exec-once = wl-paste --type text --watch cliphist store # Stores only text data
-exec-once = wl-paste --type image --watch cliphist store # Stores only image data
-
-#-------------------------------------------
-#-- environment variables
-#-------------------------------------------
-env = XCURSOR_SIZE,24
-env = HYPRCURSOR_SIZE,24
-
-env = LIBVA_DRIVER_NAME,nvidia
-env = __GLX_VENDOR_LIBRARY_NAME,nvidia
-
-env = HYPRSHOT_DIR,/home/john/Pictures/screenshots
-
-env = QT_QPA_PLATFORM,wayland
-env = QT_QPA_PLATFORMTHEME,qt6ct
-
-env = XDG_DATA_DIRS="/var/lib/flatpak/exports/share:~/.local/share/flatpak/exports/share:$XDG_DATA_DIRS"
+device {
+  name = asup1411:00-093a:200b-touchpad
+  sensitivity = -0.1
+}
