--- a/dotfiles/applications/steam/SurrounDead.desktop
+++ b/dotfiles/applications/steam/SurrounDead.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
-Name=Axiom Verge
+Name=SurrounDead
 Comment=Play this game on Steam
-Exec=steam steam://rungameid/332200
+Exec=steam steam://rungameid/1645820
 Icon=steam
 Terminal=false
 Type=Application
