--- a/dotfiles/applications/steam/Car Mechanic Simulator 2021.desktop
+++ b/dotfiles/applications/steam/Car Mechanic Simulator 2021.desktop
@@ -2,7 +2,7 @@
 Name=Car Mechanic Simulator 2021
 Comment=Play this game on Steam
 Exec=steam steam://rungameid/1190000
-Icon=steam_icon_1190000
+Icon=steam
 Terminal=false
 Type=Application
-Categories=Steam;
+Categories=Game;
