--- a/dotfiles/applications/steam/Control Ultimate Edition.desktop
+++ b/dotfiles/applications/steam/Control Ultimate Edition.desktop
@@ -2,7 +2,7 @@
 Name=Control Ultimate Edition
 Comment=Play this game on Steam
 Exec=steam steam://rungameid/870780
-Icon=steam_icon_870780
+Icon=steam
 Terminal=false
 Type=Application
-Categories=Steam;
+Categories=Game;
