--- a/dotfiles/applications/steam/Hollow Knight.desktop
+++ b/dotfiles/applications/steam/Hollow Knight.desktop
@@ -2,7 +2,7 @@
 Name=Hollow Knight
 Comment=Play this game on Steam
 Exec=steam steam://rungameid/367520
-Icon=steam_icon_367520
+Icon=steam
 Terminal=false
 Type=Application
-Categories=Steam;
+Categories=Game;
