--- a/dotfiles/applications/steam/Space Engineers.desktop
+++ b/dotfiles/applications/steam/Space Engineers.desktop
@@ -2,7 +2,7 @@
 Name=Space Engineers
 Comment=Play this game on Steam
 Exec=steam steam://rungameid/244850
-Icon=steam_icon_244850
+Icon=steam
 Terminal=false
 Type=Application
-Categories=Steam;
+Categories=Game;
