--- a/dotfiles/applications/steam/Warhammer 40,000 Space Marine 2.desktop
+++ b/dotfiles/applications/steam/Warhammer 40,000 Space Marine 2.desktop
@@ -2,7 +2,7 @@
 Name=Warhammer 40,000: Space Marine 2
 Comment=Play this game on Steam
 Exec=steam steam://rungameid/2183900
-Icon=steam_icon_2183900
+Icon=steam
 Terminal=false
 Type=Application
-Categories=Steam;
+Categories=Game;
